# jinko-megami

./: README.md  pyproject.toml
.github/workflows/: python-app.yml
jinkomegami/: main.py
jinkomegami/sensors/: camera.py
tests/: test_camera.py  test_stub.py
